Autalização das Aulas 13 e 14

--- a/Aula14ex/ex017/modelo.html
+++ b/Aula14ex/ex017/modelo.html
@@ -12,11 +12,12 @@
         <h1>Tabuada</h1>
     </header>
     <section>
-        <div>
-            Número: 
+        <div id="dados">
+            <p>Digite um número:<input type="number" name="txtnum" id="txtnum"></p> 
+            <p><input type="button" value="Gerar Tabuada" onclick="GerarTabuada()"></p>
         </div>
-        <div>
-            Olá!
+        <div id="res">
+            Olá...
         </div>
     </section>
     <footer>
