Inicio do Módulo F - Aulas 15 e 16

--- a/Aula14ex/ex017/modelo.html
+++ b/Aula14ex/ex017/modelo.html
@@ -13,11 +13,11 @@
     </header>
     <section>
         <div id="dados">
-            <p>Digite um número:<input type="number" name="txtnum" id="txtnum"></p> 
-            <p><input type="button" value="Gerar Tabuada" onclick="GerarTabuada()"></p>
+            <p>Número:<input type="number" name="txtnum" id="txtnum"> 
+            <input type="button" value="Gerar Tabuada" onclick="tabuada()"></p>
         </div>
         <div id="res">
-            Olá...
+            <select name="tabuada" id="seltab" size="10"></select>
         </div>
     </section>
     <footer>
