--- a/Ex018/modelo.html
+++ b/Ex018/modelo.html
@@ -15,15 +15,17 @@
     <section>
         <div id="dados">
         <p>
-            Digite um número: <input type="number" name="num" id="numtxt">
-            
+            Digite um número: <input type="number" name="num" id="numtxt"> 
+            <input type="button" name="Adicionar" value="Adicionar" onclick="Adicionar()"  
         </p>
         </div>
         <div id="res">
-            <select name="numAnalise" id="SelNumAnalise" size="10"></select>
+            <select name="selnum" id="Selnum" size="6"></select>    
+            <br><br>
+            <input type="button" name="Finalizar" value="Finalizar" onclick="Analise()">
         </div>
         <div id="analise">
-            <input type="button" name="Finalizar" value="Finalizar" onclick="Analise()">
+            
         </div>
     </section>
     <footer>
