Atualização- Test Turing
Revisado aulas de js e aplicado a resolução do teste

--- a/Ex018/modelo.html
+++ b/Ex018/modelo.html
@@ -16,7 +16,7 @@
         <div id="dados">
         <p>
             Digite um número: <input type="number" name="num" id="numtxt"> 
-            <input type="button" name="Adicionar" value="Adicionar" onclick="Adicionar()"  
+            <input type="button" name="Adicionar" value="Adicionar" onclick="Adicionar()" > 
         </p>
         </div>
         <div id="res">
