--- a/Turing Tests/baseballgame.html
+++ b/Turing Tests/baseballgame.html
@@ -30,6 +30,6 @@
           
         </div>
       </section>
-      <script src="scripts.js"></script>
+      <script src="scripts02.js"></script>
 </body>
 </html>
